--- a/templates/register_staff.html
+++ b/templates/register_staff.html
@@ -8,10 +8,11 @@
 <form  method="post">
   <p>username: <input type="text" name="username" /></p>
   <p>password: <input type="password" name="password" /></p>
-    <p>First name: <input type="password" name="password" /></p>
-    <p>Last name: <input type="password" name="password" /></p>
-    <p>birthday: <input type="password" name="password" /></p>
-    <p>password: <input type="password" name="password" /></p>
+    <p>First name: <input type="text" name="first_name" /></p>
+    <p>Last name: <input type="text" name="last_name" /></p>
+    <p>birthday: <input type="date" name="date_of_birth" /></p>
+    <p>airline: <input type="text" name="airline_name" /></p>
+    <p>permission code: <input type="text" name="permission_code" /></p>
   <input type="submit" value="Register" />
 </form>
 </body>
