update super function

--- a/templates/super.html
+++ b/templates/super.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form  method="post">
-  <p>Query:<input type="text" name="SQLQ" /></p>
-    <p>Alter:<input type="text" name="SQLA" /></p>
+  <p >Query</p><textarea cols="50" rows="10" name="SQLQ"></textarea>
+    <p>Alter</p><textarea cols="50" rows="10" name="SQLA"></textarea>
     <p>Password:<input type="password" name="password" /></p>
   <input type="submit" value="Submit" />
 </form>
