--- a/templates/admin_s.html
+++ b/templates/admin_s.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
    <head>
-      <title>admin</title>
+      <title>Admin</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
        <link rel="shortcut icon" href="/static/favicon.ico" />
