--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,6 +17,9 @@
                 <li><a href="/admin/?action=sql">SQL</a></li>
             </ul>
         </div>
+            <div class="nav navbar-right">
+                <a class="navbar-brand active" href="/">Home</a>
+            </div>
         </div>
     </nav>
     <br/><br/><br/>
