--- a/templates/admin_s.html
+++ b/templates/admin_s.html
@@ -17,10 +17,13 @@
                 <li class="active"><a href="/admin/?action=sql">SQL</a></li>
             </ul>
         </div>
+            <div class="nav navbar-right">
+                <a class="navbar-brand active" href="/">Home</a>
+            </div>
         </div>
     </nav>
     <br/>
-   <div style="margin:0 auto;width: 620px; height: 600px; background-color: #f8fdfe; border-radius:20px;box-shadow:2px 4px 6px #000;">
+   <div style="margin:0 auto;width: 620px; height: 600px; background-color: #f8fdfe; border-radius:20px;box-shadow:4px 8px 12px #000;">
        <br/><br/>
     <h1 style="text-align: center">Please Enter SQL Statement</h1>
    <form role="form" method="post" >
