--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,7 +25,7 @@
     <br/><br/><br/>
     <h1 style="text-align: center">{{ s }}</h1>
     {% for i in result %}
-   <p style="text-align: center">{{ i }}</p>
+   <p style="text-align: center; padding-left: 20px; padding-right: 20px">{{ i }}</p>
     {% endfor %}
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
