--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,9 @@
                     <div class="tabs-content">
                         <form class="box">
                             <h2>Do you have an account?</h2>
-                                <a href="/register-staff">Register as Staff</a>
-                                <a href="/register-customer">Register as Customer</a>
-                                <a href="/register-agent">Register as Agent</a>
+                                <a href="/register/staff">Register as Staff</a>
+                                <a href="/register/customer">Register as Customer</a>
+                                <a href="/register/agent">Register as Agent</a>
                             <h2>Already have one?</h2>
                                 <a href="/login">Login</a>
                         </form>
