--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,11 +15,10 @@
         <div>
             <ul class="nav navbar-nav">
                 <li><a href="/admin/?action=sql">SQL</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/manual/">Manual</a></li>
             </ul>
         </div>
-            <div class="nav navbar-right">
-                <a class="navbar-brand active" href="/">Home</a>
-            </div>
         </div>
     </nav>
     <br/><br/><br/>
