--- a/templates/register-customer.html
+++ b/templates/register-customer.html
@@ -8,7 +8,7 @@
 				margin: 0;
 				padding: 0;
 				font-family: sans-serif;
-				background: #34495e;
+				background: #fff;
 			}
 			.box{
 				width: 300px;
@@ -17,11 +17,11 @@
 				top: 60%;
 				left: 50%;
 				transform: translate(-50%,-50%);
-				background: #191919;
+				background: #e7e7e7;
 				text-align: center;
 			}
 			.box h1{
-				color: white;
+				color: black;
 				text-transform: uppercase;
 				font-weight: 500;
 				margin: 10px auto;
@@ -34,13 +34,13 @@
 				text-align: center;
 				border: 2px solid #3498db;
 				padding: 14px 10px;
-				width: 200px;
+				width: 180px;
 				outline: none;
-				color: white;
+				color: grey;
 				border-radius: 24px;
 				transition: 0.25s;
 			}
-			.box input[type = "address"], .box input[type = "info"], .box input[type = "passport"]{
+			.box input[type = "address"], .box input[type = "date"]{
 				border:0;
 				background: none;
 				display: inline-block;
@@ -48,18 +48,19 @@
 				text-align: center;
 				border: 2px solid #3498db;
 				padding: 14px 10px;
-				width: 80px;
+				width: 120px;
 				outline: none;
-				color: white;
+				color: grey;
 				border-radius: 24px;
 				transition: 0.25s;
 			}
+
 			.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-				width: 280px;
+				width: 240px;
 				border-color: #2ecc71;
 			}
-			.box input[type = "address"]:focus, .box input[type = "info"]:focus .box input[type = "passport"]:focus{
-				width: 120px;
+			.box input[type = "address"]:focus, .box input[type = "date"]:focus{
+				width: 180px;
 				border-color: #2ecc71;
 			}
 			.box input[type = "submit"]{
@@ -71,7 +72,7 @@
 				border: 2px solid #2ecc71;
 				padding: 14px 40px;
 				outline: none;
-				color: white;
+				color: black;
 				border-radius: 24px;
 				transition: 0.25s;
 				cursor: pointer;
@@ -81,7 +82,7 @@
 			}
 
 			.box input[type = "button"]{
-				color: white;
+				color: black;
 				font-size: 80%;
 				background: none;
 				display: inline-flex;
@@ -109,7 +110,7 @@
 			
 			a{
 				background: none;
-				color: white;
+				color: black;
 				font-size: 80%;
 				text-decoration: initial;
 				width: 80px;
@@ -128,9 +129,6 @@
 			a:hover{
 				background-color: #2ecc71;
 			}
-            .error{
-                color: #c7254e;
-            }
 
 
 			</style>
@@ -145,21 +143,19 @@
 		<input type="text" name = "email" placeholder="Email" required/> </br>
 		<input type="password" name = "password" placeholder="Password" required/></br>
 		<input type="text" name = "name" placeholder="Your full name" required/> </br>
-		<input type="info" name = "date_of_birth" placeholder="Birthday" required/>
-		<input type="info" name = "phone_number" placeholder="Phone"/></br><hr color=#555555  style="width: 70%"/>
+		<input type="address" name = "date_of_birth" placeholder="Birthday" onfocus="(this.type='date')" required/>
+		<input type="text" name = "phone_number" placeholder="Phone"/></br><hr color=#555555  style="width: 80%"/>
 		<input type="address" name = "state" placeholder="State"/>
 		<input type="address" name = "city" placeholder="City"/>
 		<input type="address" name = "street" placeholder="Street"/>
-		<input type="address" name = "building_number" placeholder="Building Number"/></br><hr color=#555555  style="width: 70%"/>
+		<input type="address" name = "building_number" placeholder="Building Number"/></br><hr color=#555555  style="width: 80%"/>
 		<input type="text" name = "passport_number" placeholder="Passport Number" required/>
-		<input type="passport" name = "passport_country" placeholder="Country"/>
-		<input type="passport" name = "passport_expiration" placeholder="Expiration"/>
+		<input type="address" name = "passport_country" placeholder="Country"/>
+		<input type="address" name = "passport_expiration" placeholder="Expiration" onfocus="(this.type='date')"/>
 		
 		<input type="submit" name="" value = Register />
 		<a href="/register/">Go back</a>
-        {% if error %}
-            <p class="error"><strong>Error:</strong> {{error}}</p>
-        {% endif %}
+        
 </form>
 
 </body>
