--- a/templates/login.html
+++ b/templates/login.html
@@ -108,6 +108,9 @@
 			a:hover{
 				background-color: #2ecc71;
 			}
+            .error{
+                color: #c7254e;
+            }
       
 			</style>
 	</head>
@@ -120,7 +123,11 @@
         <input type="submit" name="agent" value = "Login as agent" />
         <input type="submit" name="staff" value = "Login as staff" />
 	<a href="/" >Go back</a>
-
+    {% if error %}
+    <div class="error">
+        <p>{{ error }}</p>
+    </div>
+    {% endif %}
 </form>
 
 </body>
