--- a/templates/register-agent.html
+++ b/templates/register-agent.html
@@ -108,6 +108,9 @@
 			a:hover{
 				background-color: #2ecc71;
 			}
+            .error{
+                color: #c7254e;
+            }
 
 			</style>
 	</head>
@@ -123,6 +126,11 @@
 		
 		<input type="submit" name="" value = Register />
 	<a href="/register/">Go back</a>
+        {% if error %}
+    <div class="error">
+        <p>{{ error }}</p>
+    </div>
+    {% endif %}
 
 	
 </form>
