--- a/templates/register-staff.html
+++ b/templates/register-staff.html
@@ -185,6 +185,11 @@
 
     <input type="submit" name="" value = Register />
 	<a href="/register/">Go back</a>
+    {% if error %}
+    <div class="error">
+        <p>{{ error }}</p>
+    </div>
+    {% endif %}
 
 </form>
 <script>
@@ -195,7 +200,7 @@ targetoSelect.onchange = function(ev) {
     target.classList.add("select_white");
 
 }
-</script>>
+</script>
 </body>
 
 </html>
